fixed select overflow

--- a/src/Select/style.css
+++ b/src/Select/style.css
@@ -16,7 +16,7 @@
   width: 32px;
   height: 32px;
   transition: all 0.4s ease-in-out;
-  z-index: 20;
+  z-index: 50;
 }
 
 .select-list {
@@ -28,10 +28,11 @@
   width: 100%;
   display: flex;
   flex-direction: column;
-  padding: 5px 0;
+  padding: 5px 15px;
   background-color: #fff;
   border-radius: 5px;
   z-index: 50;
+  overflow: hidden;
   box-shadow: 0px 5px 5px -3px rgba(0, 0, 0, 0.2),
     0px 8px 10px 1px rgba(0, 0, 0, 0.14),
     0px 3px 14px 2px rgba(0, 0, 0, 0.12);
@@ -43,8 +44,9 @@
   padding: 0;
   font-family: Arial, Helvetica, sans-serif;
   text-align: start;
-  padding: 10px 15px;
+  padding: 10px 0;
   font-size: 18px;
+  overflow: hidden;
   line-height: 24px;
 }
 
